--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>Pat's App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+  <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
